# Live-Data-Retriever-Visualizer

./: README.md  docker-compose.yml  requirement.txt
stock_live_flow/: pyproject.toml
stock_live_flow/stock_live_flow/: main.py
stock_live_flow/stock_live_flow/KRAKEN_API/: .types.py  api.py
stock_live_flow/tests/: test_stock_live_flow.py
