[tool.poetry]
name = "stock_live_flow"
version = "0.1.0"
description = ""
authors = ["Metaphysicist1 <edgarabasov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quixstreams = "^2.10.0"
websocket = "^0.2.1"
pydantic = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
